workspace/compiler/tests/snapshots/test_snap_python__py_render_empty_classes.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

@dataclass
class Empty: ...

# ---

"""
This class has only a docstring.
"""
@dataclass
class JustDoc: ...
