workspace/compiler/tests/snapshots/test_snap_python__py_render_functions.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

def add(a: int, b: int) -> int: ...

# ---

def greet(name: str, count: int) -> str: ...

# ---

def maybe(value: int, fallback: str) -> str: ...
