workspace/compiler/tests/snapshots/test_snap_python__py_render_nested_types.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

@dataclass
class LinkedList:
    head: int
    tail: LinkedList | NoneType

# ---

// <unrendered constant>

# ---

@dataclass
class TreeNode:
    value: int
    left: TreeNode | NoneType
    right: TreeNode | NoneType

# ---

// <unrendered constant>
