workspace/compiler/tests/snapshots/test_snap_python__py_render_plain_class.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

"""
A simple counter.
"""
@dataclass
class Counter:
    count: int
