workspace/compiler/tests/snapshots/test_snap_python__py_render_protocol.snap
---
source: workspace/compiler/tests/snap_python.rs
assertion_line: 554
expression: rendered
---
// <unrendered module>

# ---

"""
Anything that can be drawn.
"""
class Drawable(Protocol):
    def draw(self, self: Self, canvas: str) -> NoneType: ...
    def resize(self, self: Self, factor: float) -> NoneType: ...

# ---

def draw(self, self: Self, canvas: str) -> NoneType: ...

# ---

def resize(self, self: Self, factor: float) -> NoneType: ...

# ---

// <unrendered constant>

# ---

class Serializable(Protocol):
    def to_bytes(self, self: Self) -> bytes: ...
    def from_bytes(self, self: Self, data: bytes) -> NoneType: ...

# ---

def from_bytes(self, self: Self, data: bytes) -> NoneType: ...

# ---

def to_bytes(self, self: Self) -> bytes: ...
