workspace/compiler/tests/snapshots/test_snap_python__py_render_subclassing.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

@dataclass
class Animal:
    name: str

# ---

@dataclass
class Cat:
    indoor: bool

# ---

@dataclass
class Dog:
    breed: str
