workspace/compiler/tests/snapshots/test_snap_python__py_render_variadic_w40.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

def configure(
    kwargs: int,
) -> NoneType: ...

# ---

def log(messages: str) -> NoneType: ...

# ---

def mixed(
    first: int,
    rest: str,
    options: bool,
) -> str: ...
