workspace/compiler/tests/snapshots/test_snap_python__py_render_wide_record_w100.snap
---
source: workspace/compiler/tests/snap_python.rs
expression: rendered
---
// <unrendered module>

# ---

"""
Full application configuration with many fields.
"""
@dataclass
class Configuration:
    host: str
    port: int
    max_connections: int
    timeout_seconds: float
    enable_tls: bool
    certificate_path: str | NoneType
    private_key_path: str | NoneType
    allowed_origins: list[str]
    extra_headers: dict[str, str]

# ---

// <unrendered constant>

# ---

// <unrendered constant>
